--- a/digitalfacilitysolutions.css
+++ b/digitalfacilitysolutions.css
@@ -768,20 +768,116 @@ margin-top:-741px;
     color: #fff;
     font-family: sans-serif;
   }
+  
   .container1{
-    height:100vh;
-    background-color:skyblue;
+    background-image:url(Picture56.PNG);
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
+    height:98.1vh;
+    margin-top:113px;
   }
   .hpost1{
-    margin-top:-780px;
-    margin-left:30px;
+    margin-top:20px;
+    margin-left:50px;
     font-family:sans-serif;
   }
   .parapos3{
-    margin-left:30px;
+    margin-left:-465px;
     margin-top:20px;
     line-height:40px;
     font-size:30px;
+    font-family:sans-serif;
+  }
+  .image2{
+    margin-left:190px;margin-top:40px;
+  }
+  .image3{
+    margin-left:-640px;margin-top:325px;
+  }
+  .container2{
+    background-image:url(Picture60.PNG);
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
+    height:86vh;
+    margin-top:0px;
+  }
+  .parapos4{
+    color:white;
+    font-size:30px;
+    margin-left:50px;
+    margin-top:30px;
+    font-family:sans-serif;
+  }
+  .parapos5{
+    color:white;
+    font-size:30px;
+    margin-left:-900px;
+    margin-top:330px;
+    font-family:sans-serif;
+  }
+  .image4{
+   margin-left:100px; 
+   margin-top:100px;
+  }
+  .container3{
+    background-image:url(Picture62.PNG);
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
+    height:86vh;
+    margin-top:0px;
+  }
+  .parapos6{
+    color:black;
+    margin-left:250px;
+    margin-top:40px;
+    font-size:30px;
+    font-family:sans-serif;
+  }
+  .parapos7{
+    color:black;
+    margin-left:-1400px;
+    margin-top:400px;
+    font-size:30px;
+    font-family:sans-serif;
+  }
+  .container4{
+    background-image:url(Picture63.PNG);
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
+    height:86vh;
+    margin-top:0px;
+  }
+  .parapos8{
+    color:black;
+    margin-left:110px;
+    margin-top:75px;
+    font-size:30px;
+    font-family:sans-serif;
+    text-align:center;
   }
   .container9{
     background-image: linear-gradient(to right, rgb(151, 167, 185) , rgba(36, 82, 209, 0.986));
