--- a/learnmoredo.css
+++ b/learnmoredo.css
@@ -281,7 +281,7 @@
   
   
   .container{
-    background-image:url(Picture19.PNG);
+    background-image:url(Picture64.PNG);
     position: cover;
     background-size: auto;
     background-repeat: no-repeat;
@@ -290,17 +290,17 @@
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:98.1vh;
+    height:85.8vh;
     margin-top:113px;
   }
   .hpos1{
     color:white;margin-left:4.4vw;margin-top:6.5vh;font-size:2vw;font-family:'Times New Roman', Times, serif;
   }
   .parapos1{
-    color:white;margin-top:14vh;margin-left:-22.9vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
+    color:white;margin-top:14vh;margin-left:-44vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
   }
   .parapos2{
-    color:white;margin-top:31.5vh;margin-left:-51.3vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
+    color:white;margin-top:36vh;margin-left:-51.2vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
   }
   .circle {
     width: 400px;
@@ -392,10 +392,109 @@
   } */
   
   .container1{
-    background-image: linear-gradient(to right, rgba(194, 206, 207, 0.904) , rgb(70, 173, 199));
-    height:12vh;
-    
-  
+    background-image:url(Picture65.PNG);
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
+    height:86vh;
+    margin-top:0px;
+  }
+  .img1{
+    margin-left:30px;
+    margin-top:20px;
+  }
+  .hpos-1{
+    margin-left:80px;
+    margin-top:30px;
+    color:white;
+    font-size:20px;
+  }
+  .ppos-1{
+margin-top:31px;
+margin-left:-182px;
+font-size:25px;
+color:white;
+font-family:sans-serif;
+  }
+  .vl {
+    border-left: 6px solid white;
+    height: 200px;
+    margin-left:80px;
+    margin-top:25px;
+  }
+  .ppos-4{
+    color:white;
+    margin-left:70px;
+    font-size:28px;
+    font-family:sans-serif;
+    line-height:40px;
+  }
+  .img2{
+    margin-left:-1594.5px;
+    margin-top:280px;
+  }
+  .hpos-2{
+    margin-left:80px;
+    margin-top:295px;
+    color:white;
+    font-size:20px;
+  }
+  .ppos-2{
+    margin-top:290px;
+    color:white;
+    font-family:sans-serif;
+    font-size:25px;
+    margin-left:-155px;
+  }
+  .vl1 {
+    border-left: 6px solid white;
+    height: 200px;
+    margin-left:87px;
+    margin-top:290px;
+  }
+  .ppos-5{
+    color:white;
+    margin-left:70px;
+    margin-top:250px;
+    font-size:28px;
+    font-family:sans-serif;
+    line-height:40px;
+  }
+  .img3{
+    margin-left:-1645px;
+    margin-top:545px;
+  }
+  .hpos-3{
+    margin-left:80px;
+    margin-top:560px;
+    color:white;
+    font-size:20px;
+  }
+  .ppos-3{
+    color:white;
+    font-family:sans-serif;
+    font-size:25px;
+    margin-top:558px;
+    margin-left:-120px;
+  }
+  .vl2 {
+    border-left: 6px solid white;
+    height: 200px;
+    margin-left:110px;
+    margin-top:555px;
+  }
+  .ppos-6{
+    color:white;
+    font-size:28px;
+    margin-top:520px;
+    margin-left:68px;
+    font-family:sans-serif;
+    line-height:40px;
   }
   .ppos1{
     margin-left:3vw;
@@ -747,18 +846,8 @@
     from {opacity: .4}
     to {opacity: 1}
   }
-  .img1{
-    margin-top: -41px;
-    margin-left:-20vh
-  }
-  .img2{
-    margin-top: -45px;
-    margin-left:-22vh
-  }
-  .img3{
-    margin-top: -41px;
-    margin-left:-20vh
-  }
+  
+  
   .img4{
     margin-top: -41px;
     margin-left:-20vh
