--- a/seemorewho.css
+++ b/seemorewho.css
@@ -281,7 +281,7 @@
   
   
   .container{
-    background-image:url(Picture19.PNG);
+    background-image:url(Picture69.PNG);
     position: cover;
     background-size: auto;
     background-repeat: no-repeat;
@@ -290,17 +290,17 @@
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:98.1vh;
+    height:85.8vh;
     margin-top:113px;
   }
   .hpos1{
-    color:white;margin-left:4.4vw;margin-top:6.5vh;font-size:2vw;font-family:'Times New Roman', Times, serif;
+    color:white;margin-left:5.2vw;margin-top:6.5vh;font-size:2vw;font-family:'Times New Roman', Times, serif;
   }
   .parapos1{
-    color:white;margin-top:14vh;margin-left:-22.9vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
+    color:white;margin-top:14vh;margin-left:-56vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
   }
   .parapos2{
-    color:white;margin-top:31.5vh;margin-left:-51.3vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
+    color:white;margin-top:35.5vh;margin-left:-56vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
   }
   .circle {
     width: 400px;
@@ -308,7 +308,7 @@
     line-height: 500px;
     border-radius: 50%;
     margin-top: 46px;
-    margin-left: 335px;
+    margin-left: 235px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
@@ -392,10 +392,19 @@
   } */
   
   .container1{
-    background-image: linear-gradient(to right, rgba(194, 206, 207, 0.904) , rgb(70, 173, 199));
-    height:12vh;
-    
+    background-color:rgb(24, 129, 214);
+    height:86.6vh;
+    margin-top:-40px;
   
+  }
+  .rec1{
+    width:80px;
+    height:100px;
+    border-style:solid;
+    border-width:0.1vw;
+    background-color:white;
+    margin-left:50px;
+    
   }
   .ppos1{
     margin-left:3vw;
