--- a/IndustrialAutomationSolutions.css
+++ b/IndustrialAutomationSolutions.css
@@ -673,11 +673,44 @@ color: #fff;
   font-size:20px;
   margin-top:5px;
 }
+.container3{
+  background-image:url(Picture53.PNG);
+  position: cover;
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  margin-left: auto;
+margin-right: auto;
+  height:88vh;
+}
+.pic71{
+  margin-left:30px;
+  margin-top:50px;
+}
+.para-1{
+  margin-left:500px;
+  margin-top:10px;
+  color:white;
+  font-family:sans-serif;
+  font-size:28px;
+  
+}
+.pic72{
+  margin-left:-1570px;
+  margin-top:250px;
+}
+.pic73{
+  margin-left:-620px;
+  margin-top:440px;
+}
   .container9{
     background-image: linear-gradient(to right, rgb(151, 167, 185) , rgba(36, 82, 209, 0.986));
     height:86.6vh;
     margin-left:-0.4vw;
     width:99.5vw;
+    margin-top:813px;
 }
   
   
