--- a/buildinginformationmodelling.css
+++ b/buildinginformationmodelling.css
@@ -345,19 +345,6 @@ color: #fff;
     border: black;
   }
  
-
-  .container2{
-    background-image:url(ppc1.PNG);
-    position: cover;
-    background-size: auto;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    margin-left: auto;
-  margin-right: auto;
-    height:86.1vh;
-  }
   .pp1{
     margin-top: 30px;
     margin-left: 30px;
@@ -814,59 +801,60 @@ margin-top:-741px;
     border-width:0.1vw;
     background-color:lightgray;
     margin-top:400px;
-    margin-left:-1867px;
+    margin-left:-1854px;
   }
   .img-1{
-margin-left:50px;
+margin-left:80px;
+margin-top:-9px;
   }
   .hd-1{
     color:dodgerblue;
     font-family:sans-serif;
     font-size:11px;
-    margin-top:-70px;
-    margin-left:80px;
+    margin-top:-55px;
+    margin-left:117px;
   }
   .img-2{
 margin-top:-80px;
 margin-left:350px;
   }
   .img-3{
-    margin-top:-90px;
-    margin-left:550px;
+    margin-top:-103px;
+    margin-left:580px;
 
   }
   .hd-2{
     color:brown;
     font-family:sans-serif;
     font-size:11px;
-    margin-top:-10px;
-    margin-left:550px;
+    margin-top:-1px;
+    margin-left:580px;
   }
   .img-4{
-    margin-top:-75px;
-    margin-left:800px;
+    margin-top:-80px;
+    margin-left:880px;
 
   }
   .img-5{
     margin-top:-100px;
-    margin-left:950px;
+    margin-left:1100px;
 
   }
   .hd-3{
     color:dodgerblue;
     font-family:sans-serif;
     font-size:11px;
-    margin-top:-10px;
-    margin-left:950px;
+    margin-top:-6px;
+    margin-left:1098px;
   }
   .img-6{
-    margin-top:-70px;
-    margin-left:1200px;
+    margin-top:-78px;
+    margin-left:1380px;
 
   }
   .img-7{
     margin-top:-100px;
-    margin-left:1300px;
+    margin-left:1580px;
 
   }
   .hd-4{
@@ -874,61 +862,271 @@ margin-left:350px;
     font-family:sans-serif;
     font-size:11px;
     margin-top:-1px;
-    margin-left:1300px;
+    margin-left:1560px;
   }
   .square1{
-    width:200px;
-    height:200px;
+    width:320px;
+    height:250px;
     border-width:0.1vw;
     border-style:solid;
     background-color:lightblue;
-    margin-top:550px;
-    margin-left:-1600px;
+    margin-top:531px;
+    margin-left:-1870px;
   }
   .square2{
-    width:200px;
-    height:200px;
+    width:320px;
+    height:250px;
     border-width:0.1vw;
     border-style:solid;
     background-color:lightsalmon;
-    margin-top:490px;
-    margin-left:30px;
+    margin-top:531px;
+    margin-left:140px;
   }
   .square3{
-    width:200px;
-    height:200px;
+    width:320px;
+    height:250px;
     border-width:0.1vw;
     border-style:solid;
     background-color:lightgreen;
-    margin-top:490px;
-    margin-left:80px;
+    margin-top:531px;
+    margin-left:200px;
   }
   .square4{
-    width:200px;
-    height:200px;
+    width:320px;
+    height:250px;
     border-width:0.1vw;
     border-style:solid;
     background-color:lightgray;
-    margin-top:490px;
-    margin-left:100px;
+    margin-top:531px;
+    margin-left:220px;
+  }
+  .h-pos1{
+    margin-left:-250px;
+    color:dodgerblue;
+  }
+  .h-pos2{
+    margin-left:-260px;
+    color:dodgerblue;
+  }
+  .h-pos3{
+    margin-left:-260px;
+    color:dodgerblue;
+  }
+  .h-pos4{
+    margin-left:-260px;
+    color:dodgerblue;
+  }
+  .container2{
+    /* background-image:url(Picture57.PNG); */
+    background-color:lightblue;
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
+    height:87.8vh;
+    margin-top:0px;
+  }
+  .p-pos1{
+    font-size:30px;
+    font-family: sans-serif;
+    margin-left:30px;
+    text-align:center;
+  }
+  .pic80{
+    margin-left:-1150px;
+    margin-top:380px;
+  }
+  .container3{
+    /* background-image:url(Picture57.PNG); */
+    background-color: lightgreen;
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
+    height:88.2vh;
+    margin-top:0px;
+  }
+  .H-pos1{
+    margin-top:-10px;
+    margin-left:60px;
+    font-size:21px;
+    font-family: sans-serif;
+  }
+  .rect1{
+    width:300px;
+    height:150px;
+    border-width:1px;
+    border-style:solid;
+    margin-left:-150px;
+    margin-top:120px;
+    background-color:white;
+  }
+  .h-post1{
+    margin-left:70px;
+    color:dodgerblue;
+  }
+  .pic81{
+    margin-top:170px;
+    margin-left:130px;
+  }
+  .rect2{
+    width:300px;
+    height:150px;
+    border-width:1px;
+    border-style:solid;
+    margin-left:120px;
+    margin-top:120px;
+    background-color:white;
+  }
+  .h-post2{
+    margin-left:40px;
+    margin-top:20px;
+    color:dodgerblue;
+  }
+  .pic-81{
+    margin-top:170px;
+    margin-left:140px;
+  }
+  .rect3{
+    width:300px;
+    height:150px;
+    border-width:1px;
+    border-style:solid;
+    margin-left:140px;
+    margin-top:120px;
+    background-color:white;
+  }
+  .h-post3{
+    margin-top:15px;
+    margin-left:50px;
+    color:dodgerblue;
+  }
+  .h-post4{
+    margin-left:-1480px;
+    margin-top:280px;
+  }
+  .p-post1{
+    margin-top:300px;
+    margin-left:-1480px;
+    font-size:25px;
+    font-family: sans-serif;
+  }
+  .h-post5{
+    margin-left:-590px;
+    margin-top:300px;
+  }
+  .p-post2{
+    font-size:25px;
+    margin-top:330px;
+    margin-left:-590px;
+  }
+  .pic82{
+    margin-top:550px;
+    margin-left:-1650px;
+  }
+  .pic83{
+    margin-top:650px;
+    margin-left:50px;
+  }
+  .pic84{
+    margin-top:550px;
+    margin-left:50px;
+  }
+  .pic85{
+    margin-top:550px;
+    margin-left:250px;
   }
   .container9{
-    background-image: linear-gradient(to right, rgb(151, 167, 185) , rgba(36, 82, 209, 0.986));
+    background-image: linear-gradient(to right, rgb(173, 184, 197) , rgba(31, 82, 223, 0.986));
     height:86.6vh;
     margin-left:-0.4vw;
     width:99.5vw;
-    margin-top:0px;
 }
+ .Circle1{
+  margin-left:1.7vw;padding-top:18.55vh;
+ } 
+ .Circle2{
+  margin-left:1.64vw;margin-top:19.6vh;
+ }
+  #circle{
+    width: 7vw;height: 14vh;border-radius:7vw;border-width:0.1vw;border-style:solid;border-color:black;
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+  }
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  .letE{
+    margin-top:-24vh;margin-left:3.85vw;font-size:5vw;color:white;margin-top:-13.2vh;
+  }
+  .letG{
+    margin-top:-24vh;margin-left:3.35vw;font-size:5vw;color:white;margin-top:-13.2vh;
+  }
+  .hpost5{
+  margin-left:10.45vw;margin-top:34.5vh;font-size:0.7vw;
+  }
+  .para1{
+  margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-55.4vh;
+  }
+  .hpost6{
+    margin-left:39.35vw;margin-top:-43.8vh;font-size:0.7vw;
+  }
+  .hpost7{
+    margin-left:55.5vw;margin-top:-3.3vh;font-size:0.7vw;
+  }
+  .hpost8{
+    margin-left:79.3vw;margin-top:-3.5vh;font-size:0.7vw;color:white;
+  }
+  .links{
+    font-weight:bold;margin-left:39.5vw;margin-top:0.1vh;font-size:1vw;line-height:2vh;
+  }
+  .para3{
+    font-weight:bold;margin-left:55.5vw;margin-top:-34.1vh;font-size:1vw;line-height:2vh;
+  }
+  .info{
+    font-weight:bold;margin-left:79.5vw;margin-top:-34.2vh;font-size:1vw;color:white;line-height:2vh;
+  }
+  .Hpos{
+    margin-left:10.5vw;margin-top:1.4vh;font-size:0.6vw;
+  }
+  .Mpos{
+    margin-left:39.9vw;margin-top:-3vh;font-size:0.6vw;
+  }
+  .Kpos{
+    margin-left:67.7vw;margin-top:-3vh;font-size:0.6vw;
+  }
+  .HA{
+    margin-left:10.5vw;margin-top:1.5vh;font-size:1vw;
+  }
+  .MA{
+    margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw;
+  }
+  .KA{
+    margin-left:67.7vw;margin-top:-7.3vh;font-size:1vw;
+  }
+  .Tpos{
+    margin-left:10.5vw;margin-top:2vh;font-size:0.6vw;
+  }
+  .Gpos{
+    margin-left:39.9vw;margin-top:-3vh;font-size:0.6vw;
+  }
+  .Rpos{
+    margin-left:67.7vw;margin-top:-3vh;font-size:0.6vw;
+  }
+  .TA{
+    margin-left:10.5vw;margin-top:1.3vh;font-size:1vw;
+  }
+  .GA{
+    margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw;
+  }
+  .RA{
+    margin-left:67.7vw;margin-top:-7.2vh;font-size:1vw;
+  }
     .footer{
       height: 60px;
       margin-top: 0.2px;
@@ -970,4 +1168,4 @@ margin-left:350px;
     }
   
   
-  
+   
