--- a/seemorecherish.css
+++ b/seemorecherish.css
@@ -13,39 +13,38 @@
   .cc{
     text-decoration: none;
   color: black;
-    margin: 1.1vh;
-    margin-left: 1.2vw;
+    margin-top: 0.9vh;
+    margin-left:1.2vw;
     font-size: 25px;
   }
   .ne{
   text-decoration: none;
   margin-left:9.4vw;
-  margin-top: -3.35vh;
+  margin-top: -2.1vh;
   font-size: 25px;
   }
   .In{
   text-decoration: none;
-  margin-left: 22vw;
-  margin-top: -2.35vh;
+  margin-left: 21.95vw;
+  margin-top: -2.3vh;
   font-size: 25px;
   }
-  .world{
-    margin-left: 1655px;
-    margin-top: -36px;
+  /* .world{
+    margin-left: 1325px;
+    margin-top: 2px;
     font-size: 30px;
-  }
-  .globelogo{
-    margin-left: 1620px;
-    top: 0;
-    margin-top: -30.8px;
-    font-size: 32px;
-  }
-  .searchlogo{
-    margin-left: 1800px;
-    margin-top: -30px;
+  } */
+  /* .globelogo{
+    margin-left: 1290px;
+    margin-top: 80.5px;
+    font-size: 192px;
+  } */
+  /* .searchlogo{
+    margin-left: 1470px;
+    margin-top: 20px;
     font-size: 27px;
   }
-  
+   */
   .dot1{
   margin-top: -18px;
   font-size: 10px;
@@ -53,8 +52,8 @@
   }
   .dot2{
   font-size: 10px;
-  margin-left: 167px;
-  margin-top: -18px;
+  margin-left: 165px;
+  margin-top: -17px;
   }
   
   
@@ -67,7 +66,6 @@
     margin-right: 2%;
     text-decoration: white;
     width: 100%;
-   
     text-align: right;
     display: flex;
   }
@@ -212,17 +210,17 @@
   z-index:1;
   }
   .what {
-    margin-left:-6.55%;
+    margin-left:45.5%;
      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 1.3rem;
      font-weight: bold;
   top: -100px;
-  margin-top: -3.7%;
+  margin-top: -50px;
    
      /* width: 150%; */
   }
   .Whos{
-    margin-top: -3.7%;
+    margin-top:-50px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.3rem;
     font-weight: bold;
@@ -232,17 +230,17 @@
     font-size: 21px;
     font-weight: bold;
      
-    margin-top: -3.7%;
+    margin-top:-50px;
   }
   .Insights{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 21px;
      font-weight: bold;
      margin-left: -21px;
-     margin-top: -3.7%;
+     margin-top:-50px;
   }
   .getin{
-   margin-top: -3.7%;
+   margin-top:-50px;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 21px;
    font-weight: bold;
@@ -258,12 +256,12 @@
   .enimg{
    
     text-align: center;
-    margin-left: -81.5vw;
-    margin-top: 19px;
+    margin-left: -60.4vw;
+    margin-top: -1.8vh;
   }
   .gg{
-    margin-left: 4vw;
-    margin-top: 14px;
+    margin-left: -10.6vw;
+    margin-top: 8px;
     margin-bottom: -32px;
   width: 0%;
   font-size: 25px;
@@ -281,8 +279,9 @@
   }
   
   
+  
   .container{
-    background-image:url(Picture27.PNG);
+    background-image:url(Picture89.PNG);
     position: cover;
     background-size: auto;
     background-repeat: no-repeat;
@@ -291,47 +290,17 @@
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:91.4vh;
+    height:85.8vh;
     margin-top:113px;
   }
-  .imgb{
-    margin-left:0vw;
-    margin-top:13.4vh;
+  .hpos1{
+    color:white;margin-left:4.4vw;margin-top:6.5vh;font-size:2vw;font-family:'Times New Roman', Times, serif;
   }
-  .paragraph{
-    display: flex;
+  .parapos1{
+    color:white;margin-top:14vh;margin-left:-22.9vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
   }
-  .para1{
-    margin-top: 65px;
-    color: #fff;
-    font-size: 70px;
-    font-family: sans-serif;
-    margin-left:104px;
-    width: 60vw;
-    font-weight: bold;
-   
-  }
-  .para2{
-    margin-top: 170px;
-    color: #fff;
-    font-size: 70px;
-    font-family: sans-serif;
-    margin-left: -1151px;
-    width: 60vw;
-    font-weight: bold;
-  }
-  .para3{
-    margin-top: 270px;
-    color: #fff;
-    font-size: 33px;
-    font-family: sans-serif;
-    margin-left: -1150px;
-    width: 58vw;
-    line-height:50px;
-  }
-  .let{
-    font-size: 120px;
-    margin-top: -60px;
+  .parapos2{
+    color:white;margin-top:31.5vh;margin-left:-51.3vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;
   }
   .circle {
     width: 400px;
@@ -339,35 +308,118 @@
     line-height: 500px;
     border-radius: 50%;
     margin-top: 46px;
-    margin-left: 188px;
+    margin-left: 335px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
   }
-  .lets{
-    font-size: 120px;
-    margin-top: -120px;
-  }
   .circle2 {
     width: 400px;
     height: 400px;
-    line-height: 600px;
-    border-radius: 60%;
+    line-height: 500px;
+    border-radius: 50%;
     margin-top: 337px;
-    margin-left: -395px;
+    margin-left: -405px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
     border: black;
   }
+ 
+  .paragraph{
+    display: flex;
+  }
+  .para1{
+    margin-top: 200px;
+    color: #fff;
+    font-size: 54px;
+    font-family: sans-serif;
+    margin-left: 3%;
+    width: 60vw;
+    font-weight: bold;
+   
+  }
+  .para2{
+    margin-top: 280px;
+    color: #fff;
+    font-size: 54px;
+    font-family: sans-serif;
+    margin-left: -33.6%;
+    width: 60vw;
+    font-weight: bold;
+  }
+  .para3{
+    margin-top: 380px;
+    color:black;
+    font-size: 26px;
+    font-family: sans-serif;
+    margin-left: -33.5%;
+    width: 58vw;
+  }
+  .let{
+    font-size: 120px;
+    margin-top: -58px;
+  }
+  /* .circle {
+    width: 280px;
+    height: 280px;
+    line-height: 500px;
+    border-radius: 50%;
+    margin-top: 165px;
+    margin-left: -110%;
+    color: black;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+  } */
+  .circle{
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+  }
+  .lets{
+    font-size: 120px;
+    margin-top: -58px;
+  }
+  /* .circle2 {
+    width: 280px;
+    height: 280px;
+    line-height: 500px;
+    border-radius: 50%;
+    margin-top: 360px;
+    margin-left: -265px;
+    color: black;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+    border: black;
+  } */
   
+  .container1{
+    background-image: linear-gradient(to right, rgba(194, 206, 207, 0.904) , rgb(70, 173, 199));
+    height:12vh;
+    
   
+  }
+  .ppos1{
+    margin-left:3vw;
+    font-size:2vw;
+    padding-top:1.5vh;
+    color:#717171
+  }
+  .numbertext {
+    color: blue;
+    font-size: 22px;
+    margin-left: 460px;
+    position: absolute;
+    margin-top: -49px;
+    font-weight:bold;
+  }
+
   .container2{
   height: 99vh;
   background-color: white;
   display: flex;
-  margin-top: -50px;
-  }  
+  margin-top: -40px;
+  }
+  
+  
   .slideshow-container {
     height: 90vh;
     position: relative;
@@ -385,7 +437,7 @@
     position: absolute;
     top: 50%;
     width: auto;
-    margin-top: -82px;
+    margin-top: -116px;
     padding: 16px;
     color: black;
     font-weight: bold;
@@ -405,15 +457,24 @@
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
-  
-  /* Caption text                                                               first slide css */
-  .text1 {
-    color:black;
+                                                             /* first slide image and text */                                                           
+                                                             
+  .hpos2{
+    margin-top:-650px;
+    margin-left:280px;
+    color:white;
+    font-size:30px;
+  }
+                                                             
+                                                             
+                                                             
+  .text {
+    color:white;
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: -640px;
-   margin-left: 100px;
+   margin-top: 30px;
+   margin-left: 280px;
     width: 50%;
     text-align: justify;
     line-height:40px;
@@ -421,95 +482,95 @@
   
   }
   .me{
-    color: rgb(116, 110, 110);
-    margin-left: 570px;
-    margin-top: -746px;
-    font-size: 24px;
+    color: black;
+    text-decoration: underline;
+    /* margin-left: 600px; */
+    /* margin-top: -1066px; */
+    /* font-size: 2vw; */
     font-family: sans-serif;
   }
   
   .co{
-  margin-left: 890px;
-  margin-top: -28px;
+  /* margin-left: 880px; */
+  /* margin-top: -28px; */
   font-size: 24px;
   font-family: sans-serif;
+  text-decoration: underline;
   }
   .int{
-    margin-left: 1120px;
+    /* margin-left: 1100px; */
     margin-top: -26px;
     font-size: 24px;
     font-family: sans-serif;
+    text-decoration: underline;
   }
   
   
   
   
   
-  .meimge{
-    margin-top: 130px;
-    margin-left: 1074px;
+  .meimge1{
+    margin-top: 60px;
+    margin-left: 1130px;
     z-index: -1;
     display: flex;
-    width:350px;
-    height:350px;
+    /* width:1000px; */
    
   }
-  .rd {
+  /* .rd {
   width:10%;
   height:30px;
-  margin-top: 100px;
-  margin-left: 800px;
+  margin-top: 300px;
+  margin-left: 200px;
   border-radius: 30px;
-  border-style:solid;
-  /* background-color:#FFFFFF; */
+  background-color:#FFFFFF;
   text-align: center;
-  border-width:5px;
-  border-color:rgba(33, 55, 253, 0.5); 
+  border:2px solid;
+  border-color: rgba(0, 255, 0, 0.5);  
+  } */
+                                                        /* second slide image and text */
+
+        .globelogo{
+        margin-left: 590px;
+
+        margin-top: -700.5px;
+        font-size: 150px;
+       }
   
-  }
-  
-  .a-pos1{
-    font-size:28px;
-    color:blue;
-    margin-top:40px;
-  }
-  
-  
-  /* ---------------------------second slides css------------------------ */
-  
-  .text2 {
-    color:black;
+  .text1 {
+    color:white;
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: -662px;
-   margin-left: 100px;
+   margin-top: 60px;
+   margin-left: 280px;
     width: 50%;
     text-align: justify;
-    line-height:40px;
    
   
   }
-  .me2{
-   
-    margin-left: 570px;
-    margin-top: -766px;
+  .me1{
+    color:brown;
+    margin-left: 470px;
+    margin-top: -566px;
     font-size: 24px;
     font-family: sans-serif;
+    text-decoration: underline;
   }
   
-  .co2{
-    color: rgb(116, 110, 110);
-  margin-left: 890px;
+  .co1{
+  margin-left: 780px;
   margin-top: -28px;
   font-size: 24px;
   font-family: sans-serif;
+  text-decoration: underline;
   }
-  .int2{
-    margin-left: 1120px;
+  .int1{
+    margin-left: 990px;
     margin-top: -26px;
     font-size: 24px;
     font-family: sans-serif;
+    text-decoration: underline;
   }
   
   
@@ -517,54 +578,69 @@
   
   
   .meimge2{
-    margin-top: 130px;
-    margin-left: 1074px;
+    margin-top: 60px;
+    margin-left: 1130px;
     z-index: -1;
     display: flex;
-    width:350px;
-    height:350px;
    
   }
+  /* .rd {
+  width:10%;
+  height:30px;
+  margin-top: 300px;
+  margin-left: 200px;
+  border-radius: 30px;
+  background-color:#FFFFFF;
+  text-align: center;
+  border:2px solid;
+  border-color: rgba(0, 255, 0, 0.5);  
+  } */
   
-  .a-pos2{
-    font-size:28px;
-    margin-top:40px;
-  }
   
-  /* ---------------------------third slides css------------------------ */
   
-  .text3 {
-    color:black;
+  
+                                        /* ---------------------------third slides css------------------------ */
+  
+  .text2 {
+    color:white;
     font-size: 28px;
   font-family: sans-serif;
     position: absolute;
-   margin-top: -662px;
-   margin-left: 100px;
+   margin-top: 60px;
+   margin-left: 280px;
     width: 50%;
     text-align: justify;
     line-height:40px;
    
   
   }
-  .me3{
-    margin-left: 570px;
-    margin-top: -766px;
+  .img5{
+    margin-left:500px;
+    margin-top:-700px;
+  }
+  .me2{
+   
+    margin-left: 470px;
+    margin-top: -570px;
     font-size: 24px;
     font-family: sans-serif;
+    text-decoration: underline;
   }
   
-  .co3{
-    margin-left: 890px;
-    margin-top: -28px;
+  .co2{
+    color:brown;
+  margin-left: 780px;
+  margin-top: -28px;
   font-size: 24px;
   font-family: sans-serif;
+  text-decoration: underline;
   }
-  .int3{
-    color: rgb(116, 110, 110);
-    margin-left: 1120px;
+  .int2{
+    margin-left: 990px;
     margin-top: -26px;
     font-size: 24px;
     font-family: sans-serif;
+    text-decoration: underline;
   }
   
   
@@ -572,46 +648,90 @@
   
   
   .meimge3{
-    margin-top: 130px;
-    margin-left: 1030px;
-    
+    margin-top: 55px;
+    margin-left: 1120px;
     z-index: -1;
     display: flex;
-    width:860px;
-    height:350px;
    
   }
   
-  .a-pos3{
-    font-size:28px;
-    margin-top:40px;
-  }
   
   
+                                                    /* ---------------------------fourth slides css------------------------ */
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #221f1f;
-    font-size: 22px;
-    margin-left: 1800px;
+  .text3 {
+    color:white;
+    font-size: 28px;
+  font-family: sans-serif;
     position: absolute;
-    margin-top: 20px;
-    font-weight:bold;
+   margin-top: 60px;
+   margin-left: 280px;
+    width: 50%;
+    text-align: justify;
+   
+  
   }
+  .img6{
+    margin-left:550px;
+    margin-top:-700px;
+  }
+  .me3{
+   
+    margin-left: 470px;
+    margin-top: -570px;
+    font-size: 24px;
+    font-family: sans-serif;
+    text-decoration: underline;
+  }
+  
+  .co3{
+   
+  margin-left: 780px;
+  margin-top: -28px;
+  font-size: 24px;
+  font-family: sans-serif;
+  text-decoration: underline;
+  }
+  .int3{
+    color:brown;
+    margin-left: 990px;
+    margin-top: -26px;
+    font-size: 24px;
+    font-family: sans-serif;
+    text-decoration: underline;
+  }
+  
+  
+  
+  
+  
+  .meimge4{
+    margin-top: 55px;
+    margin-left: 1120px;
+    z-index: -1;
+    display: flex;
+   
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
   
   /* The dots/bullets/indicators */
   .dot {
@@ -641,13 +761,20 @@
     to {opacity: 1}
   }
   .img1{
-    margin-top: -40px;
+    margin-top: -41px;
+    margin-left:-20vh
   }
   .img2{
-    margin-top: -40px;
+    margin-top: -45px;
+    margin-left:-22vh
   }
   .img3{
-    margin-top: -40px;
+    margin-top: -41px;
+    margin-left:-20vh
+  }
+  .img4{
+    margin-top: -41px;
+    margin-left:-20vh
   }
   
   
@@ -662,149 +789,14 @@
   
   
   
-  .container3{
-    margin-top:-99.2px;
-  height: 88.2vh;
-  background-color:lightgreen;
-  display: flex;
-  }
-  .bpos1{
-    margin-left:-1600px;
-    margin-top:180px;
-    color:black;
-    font-size:90px;
-    font-family: 'Times New Roman', Times, serif
-    /* font-weight:bold; */
-  }
-  .ppos18{
-    margin-left:-1550px;
-    margin-top:420px;
-    font-size:30px;
-    font-family: 'Times New Roman', Times, serif
+  
+  .ppos2{
+margin-left:25.45vw;
+color:black;
+margin-top:12.5vh;
+font-size:3vw;
   }
   
-  
-  
- .container4{
-  background-color:yellow;
-  height:18.4vh;
- }
-  
-  
- .container5{
-  background-color:orange;
-  height:72vh;
- }
- .image2{
-  padding-top:0.5px;
- }
-  
-  
-  
-  
-  /* container-5 */
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  .container1{
-    height:88vh;
-    background-color:seashell;
-    margin-top:-99.2px;
-  }
-  .ppos16{
-    color:black;
-    margin-left:30px;
-    padding-top:30px;
-    font-size:40px;
-  }
-  .parapos1{
-    color:blank;
-    margin-left:110px;
-    margin-top:-40px;
-    font-size:27px;
-  }
-  .arr1{
-    margin-left:880px;
-    margin-top:-30px;
-  }
-  .line1{
-    margin-left:30px;
-  }
-  .parapos2{
-    color:blank;
-    margin-left:1080px;
-    margin-top:-40px;
-    font-size:27px;
-  }
-  .arr2{
-    margin-left:1830px;
-    margin-top:-40px;
-  }
-  .line2{
-    margin-left:990px;
-    margin-top:7px;
-  }
-  .parapos3{
-    color:blank;
-    margin-left:110px;
-    margin-top:-35px;
-    font-size:27px;
-  }
-  .arr3{
-    margin-left:880px;
-    margin-top:-35px;
-  }
-  .line3{
-    margin-left:30px;
-    margin-top:20px;
-  }
-  .parapos4{
-    color:blank;
-    margin-left:1080px;
-    margin-top:-35px;
-    font-size:27px;
-  }
-  .arr4{
-    margin-left:1830px;
-    margin-top:-35px;
-  }
-  .line4{
-    margin-left:990px;
-    margin-top:15px;
-  }
   .container9{
     background-image: linear-gradient(to right, rgb(173, 184, 197) , rgba(31, 82, 223, 0.986));
     height:86.6vh;
@@ -814,10 +806,10 @@
  .Circle1{
   margin-left:1.7vw;padding-top:18.55vh;
  } 
- .Circle-2{
+ .Circle2{
   margin-left:1.64vw;margin-top:19.6vh;
  }
-  #circle-A{
+  #circle{
     width: 7vw;height: 14vh;border-radius:7vw;border-width:0.1vw;border-style:solid;border-color:black;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
   }
@@ -831,7 +823,7 @@
   .hpost5{
   margin-left:10.45vw;margin-top:34.5vh;font-size:0.7vw;
   }
-  .para-A{
+  .para-1{
   margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-55.4vh;
   }
   .hpost6{
@@ -846,7 +838,7 @@
   .links{
     font-weight:bold;margin-left:39.5vw;margin-top:0.1vh;font-size:1vw;line-height:2vh;
   }
-  .paraB{
+  .para3{
     font-weight:bold;margin-left:55.5vw;margin-top:-34.1vh;font-size:1vw;line-height:2vh;
   }
   .info{
@@ -927,10 +919,6 @@
       margin-top: 9.5px;
       margin-left: 1.6%;
     }
-  
-  
-  
-  
   
   
   
