--- a/seemorewho.css
+++ b/seemorewho.css
@@ -392,19 +392,82 @@
   } */
   
   .container1{
+    /* background-image:url(Picture69.PNG); */
     background-color:rgb(24, 129, 214);
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
     height:86.6vh;
-    margin-top:-40px;
-  
+    margin-top:0px;
   }
   .rec1{
-    width:80px;
-    height:100px;
+    width:450px;
+    height:535px;
     border-style:solid;
     border-width:0.1vw;
     background-color:white;
-    margin-left:50px;
+    margin-left:138px;
+    margin-top:120px;
     
+  }
+  .h-1{
+   
+    text-align:center;
+    color:dodgerblue;
+    margin-top:2px;
+  }
+  .p-1{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
+  }
+  .rec2{
+    width:450px;
+    height:535px;
+    border-style:solid;
+    border-width:0.1vw;
+    background-color:white;
+    margin-left:138px;
+    margin-top:120px;
+    
+  }
+  .h-2{
+    color:dodgerblue;
+    text-align:center;
+    margin-top:2px;
+  }
+  .p-2{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
+  }
+  .rec3{
+    width:450px;
+    height:535px;
+    border-style:solid;
+    border-width:0.1vw;
+    background-color:white;
+    margin-left:138px;
+    margin-top:120px;
+    
+  }
+  .h-3{
+    text-align:center;
+    color:dodgerblue;
+    margin-top:2px;
+  }
+  .p-3{
+    text-align:center;
+    font-size:25px;
+    color:gray;
+    margin-top:2px;
   }
   .ppos1{
     margin-left:3vw;
